increase player points
